cabal-version:  2.4
name:           kreb-editor-core
version:        0.0.0.0
description:    Please see the README on GitHub at <https://github.com/nbloomf/krebstar#readme>
homepage:       https://github.com/nbloomf/krebstar#readme
bug-reports:    https://github.com/nbloomf/krebstar/issues
author:         Nathan Bloomfield
maintainer:     nbloomf@gmail.com
copyright:      Automattic, Inc
license:        BSD-3-Clause
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/nbloomf/krebstar

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
      Kreb.Editor.Core
    , Kreb.Editor.Core.Action
    , Kreb.Editor.Core.Monad
    , Kreb.Editor.Core.Mock
    , Kreb.Editor.Core.Data
    , Kreb.Editor.Core.Data.Panel
    , Kreb.Editor.Core.Data.Settings
    , Kreb.Editor.Core.Data.Tab
    , Kreb.Editor.Core.Data.State
    , Kreb.Editor.Core.Data.Env
    , Kreb.Editor.Core.Data.Preferences
    , Kreb.Editor.Core.Data.Signal
    , Kreb.Editor.Core.Data.Action
  build-depends:
      base >=4.7 && <5
    , bytestring >=0.8.10.2
    , kreb-control
    , kreb-effect
    , kreb-reflect
    , kreb-category
    , kreb-struct
    , kreb-text
    , kreb-lang

test-suite kreb-editor-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Kreb/Editor/Core/Test.lhs
  other-modules:
      Kreb.Editor.Core.Test.Suite
    , Kreb.Editor.Core.Mock.Test
    , Kreb.Editor.Core.Data.Panel.Test
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers >=0.6.0.1
    , tasty >=1.2

    , kreb-effect
    , kreb-control
    , kreb-prop
    , kreb-text
    , kreb-lang
    , kreb-editor-core
