cabal-version:  2.4
name:           kreb-editor-tui
version:        0.0.0.0
description:    Please see the README on GitHub at <https://github.com/nbloomf/krebstar#readme>
homepage:       https://github.com/nbloomf/krebstar#readme
bug-reports:    https://github.com/nbloomf/krebstar/issues
author:         Nathan Bloomfield
maintainer:     nbloomf@gmail.com
copyright:      Automattic, Inc
license:        BSD-3-Clause
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/nbloomf/krebstar

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
      Kreb.Editor.TUI
    , Kreb.Editor.TUI.Run
    , Kreb.Editor.TUI.Render
    , Kreb.Editor.TUI.Handler
    , Kreb.Editor.TUI.Monad
    , Kreb.Editor.TUI.Data
    , Kreb.Editor.TUI.Data.Layout
  build-depends:
      base >=4.7 && <5
    , vty >=5.25.1
    , terminal-size >=0.3.2.1
    , array >=0.5.3.0

    , kreb-effect
    , kreb-reflect
    , kreb-control
    , kreb-struct
    , kreb-text
    , kreb-lang
    , kreb-editor-core
