cabal-version:  2.4
name:           kreb-editor
version:        0.0.0.0
description:    Please see the README on GitHub at <https://github.com/nbloomf/krebstar#readme>
homepage:       https://github.com/nbloomf/krebstar#readme
bug-reports:    https://github.com/nbloomf/krebstar/issues
author:         Nathan Bloomfield
maintainer:     nbloomf@gmail.com
copyright:      Automattic, Inc
license:        BSD-3-Clause
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/nbloomf/krebstar

executable krebedit
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , vty >=5.25.1
    , terminal-size >=0.3.2.1
    , array >= 0.5.3.0
    , bytestring >=0.8.10.2
    , containers >=0.6.0.1
    , text >=1.2.3.1

    , kreb-reflect
    , kreb-control
    , kreb-struct
    , kreb-text
    , kreb-editor-core
    , kreb-editor-tui
