cabal-version:  2.4
name:           kreb-effect
version:        0.0.0.0
description:    Please see the README on GitHub at <https://github.com/nbloomf/krebstar#readme>
homepage:       https://github.com/nbloomf/krebstar#readme
bug-reports:    https://github.com/nbloomf/krebstar/issues
author:         Nathan Bloomfield
maintainer:     nbloomf@gmail.com
copyright:      Automattic, Inc
license:        BSD-3-Clause
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/nbloomf/krebstar

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
      Kreb.Effect
    , Kreb.Effect.Data
    , Kreb.Effect.Region
    , Kreb.Effect.Mock
  build-depends:
      base >=4.7 && <5
    , time >=1.8.0.2
    , Hclip >=3.0.0.4
    , kreb-control
    , kreb-format
    , kreb-prop
    , kreb-struct
