cabal-version:  2.4
name:           kreb-format
version:        0.0.0.0
description:    Please see the README on GitHub at <https://github.com/nbloomf/krebstar#readme>
homepage:       https://github.com/nbloomf/krebstar#readme
bug-reports:    https://github.com/nbloomf/krebstar/issues
author:         Nathan Bloomfield
maintainer:     nbloomf@gmail.com
copyright:      Automattic, Inc
license:        BSD-3-Clause
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/nbloomf/krebstar

library
  default-language: Haskell2010
  hs-source-dirs: src
  default-extensions:
      ScopedTypeVariables
    , TypeSynonymInstances
    , FlexibleInstances
    , OverloadedStrings
    , BangPatterns
    , InstanceSigs
  exposed-modules:
      Kreb.Format
    , Kreb.Format.Doc
    , Kreb.Format.Combinator
    , Kreb.Format.Display
  other-modules:
      Kreb.Format.Util
  build-depends:
      base >=4.7 && <5
    , text >=1.2.3.1
    , kreb-control

test-suite kreb-format-doctest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: doctest
  main-is: Kreb/Format/DocTest.lhs
  ghc-options:
    -threaded
  other-modules:
      Kreb.Format.DocTest.Suite
  build-depends:
      base >4 && <5
    , kreb-format
    , doctest >=0.16.0.1
    , text >=1.2.3.1
