cabal-version:  2.4
name:           kreb-lang
version:        0.0.0.0
description:    Please see the README on GitHub at <https://github.com/nbloomf/krebstar#readme>
homepage:       https://github.com/nbloomf/krebstar#readme
bug-reports:    https://github.com/nbloomf/krebstar/issues
author:         Nathan Bloomfield
maintainer:     nbloomf@gmail.com
copyright:      Automattic, Inc
license:        BSD-3-Clause
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/nbloomf/krebstar

library
  default-language: Haskell2010
  build-tools: alex, happy
  hs-source-dirs: src
  exposed-modules:
      Kreb.Lang
    , Kreb.Lang.PrettyPrint
    , Kreb.Lang.Loc
    , Kreb.Lang.Expr
    , Kreb.Lang.Type
    , Kreb.Lang.Value
    , Kreb.Lang.Module
    , Kreb.Lang.Lexer
    , Kreb.Lang.Parser
    , Kreb.Lang.Runtime
    , Kreb.Lang.Interpreter
    , Kreb.Lang.Error
    , Kreb.Lang.LexicalGrammar
  build-depends:
      base >=4.7 && <5
    , array >= 0.5.3.0
    , text >=1.2.3.1
    , containers >=0.6.0.1

    , kreb-format
    , kreb-prop



executable kreblang
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: app/kreblang
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , kreb-lang
    , kreb-text



test-suite kreb-lang-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Kreb/Lang/Test.lhs
  other-modules:
      Kreb.Lang.Test.Suite
    , Kreb.Lang.Type.Test
    , Kreb.Lang.Module.Test
    , Kreb.Lang.Interpreter.Test
    , Kreb.Lang.Parser.Test
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers >=0.6.0.1
    , tasty >=1.2

    , kreb-format
    , kreb-prop
    , kreb-lang
