cabal-version:  2.4
name:           kreb-pandoc
version:        0.0.0.0
description:    Please see the README on GitHub at <https://github.com/nbloomf/krebstar#readme>
homepage:       https://github.com/nbloomf/krebstar#readme
bug-reports:    https://github.com/nbloomf/krebstar/issues
author:         Nathan Bloomfield
maintainer:     nbloomf@gmail.com
copyright:      Automattic, Inc
license:        BSD-3-Clause
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/nbloomf/krebstar

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
      Kreb.Pandoc
    , Kreb.Pandoc.Base
    , Kreb.Pandoc.Util
    , Kreb.Pandoc.TikZ
    , Kreb.Pandoc.Sidenote
    , Kreb.Pandoc.Anchor
  default-extensions:
  build-depends:
      base >=4.7 && <5
    , typed-process >=0.2.4.1
    , text >=1.2.3.1
    , bytestring >=0.10.8.0
    , pandoc >=2.5
    , pandoc-types >=1.17.5.4
    , transformers >=0.5.6.2
    , directory >=1.3.3.0
    , filepath >=1.4.2.1
    , pureMD5 >=2.1.3
    , containers >=0.6.0.1
    , monad-loops >=0.4.3
    , mtl >=2.2.2

executable krebdocs
  default-language: Haskell2010
  main-is: Main.lhs
  hs-source-dirs: app/KrebDoc
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , pandoc >=2.5
    , text >=1.2.3.1
    , bytestring >=0.10.8.0
    , containers >=0.6.0.1
    , unix >=2.7.2.2
    , utf8-string >=1.0.1.1
    , kreb-pandoc
    , aeson >=1.4.2.0
    , monad-loops >=0.4.3
    , MissingH >=1.4.1.0
    , unordered-containers >=0.2.10.0
    , containers >=0.6.0.1
    , vector >=0.12.0.3
    , directory >=1.3.3.0
