cabal-version:  2.4
name:           kreb-struct
version:        0.0.0.0
description:    Please see the README on GitHub at <https://github.com/nbloomf/krebstar#readme>
homepage:       https://github.com/nbloomf/krebstar#readme
bug-reports:    https://github.com/nbloomf/krebstar/issues
author:         Nathan Bloomfield
maintainer:     nbloomf@gmail.com
copyright:      Automattic, Inc
license:        BSD-3-Clause
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/nbloomf/krebstar

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
      Kreb.Struct
    , Kreb.Struct.Class
    , Kreb.Struct.Class.Valued
    , Kreb.Struct.Class.Container
    , Kreb.Struct.Class.Container.Test

    , Kreb.Struct.Data
    , Kreb.Struct.Data.FingerTree
    , Kreb.Struct.Data.FingerTree.Zipper
    , Kreb.Struct.Data.Deque
    , Kreb.Struct.Data.Seq
    , Kreb.Struct.Data.RunLengthEncoded
    , Kreb.Struct.Data.StemTree
    , Kreb.Struct.Data.StemTree.Zipper

    , Kreb.Struct.Data.Deque.Zipper
    , Kreb.Struct.Data.RedBlackTree
    , Kreb.Struct.Data.FiniteMap

    , Kreb.Struct.Data.Zipper
  default-extensions:
      ScopedTypeVariables
    , TypeFamilies
    , InstanceSigs
    , KindSignatures
    , GADTs
    , MultiParamTypeClasses
    , TypeApplications
    , QuantifiedConstraints
  build-depends:
      base >=4.7 && <5
    , tasty >=1.2
    , kreb-control
    , kreb-format
    , kreb-prop
    , kreb-category
    , kreb-arith

test-suite kreb-struct-doctest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: doctest
  main-is: Kreb/Struct/DocTest.lhs
  ghc-options:
    -threaded
  other-modules:
      Kreb.Struct.DocTest.Suite
  build-depends:
      base >4 && <5
    , kreb-prop
    , kreb-category
    , doctest >=0.16.0.1

test-suite kreb-struct-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Kreb/Struct/Test.lhs
  other-modules:
      Kreb.Struct.Test.Suite
    , Kreb.Struct.Data.FingerTree.Test
    , Kreb.Struct.Data.FingerTree.Zipper.Test
    , Kreb.Struct.Data.Deque.Test
    , Kreb.Struct.Data.Seq.Test
    , Kreb.Struct.Data.RunLengthEncoded.Test
    , Kreb.Struct.Data.StemTree.Test
    , Kreb.Struct.Data.StemTree.Zipper.Test

    , Kreb.Struct.Sequence.Test
    , Kreb.Struct.RedBlackTree.Test
    , Kreb.Struct.FiniteMap.Test
  default-extensions:
      ScopedTypeVariables
    , TypeFamilies
    , InstanceSigs
    , KindSignatures
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , tasty >=1.2
    , kreb-control
    , kreb-format
    , kreb-prop
    , kreb-category
    , kreb-struct
