cabal-version:  2.4
name:           kreb-text
version:        0.0.0.0
description:    Please see the README on GitHub at <https://github.com/nbloomf/krebstar#readme>
homepage:       https://github.com/nbloomf/krebstar#readme
bug-reports:    https://github.com/nbloomf/krebstar/issues
author:         Nathan Bloomfield
maintainer:     nbloomf@gmail.com
copyright:      Automattic, Inc
license:        BSD-3-Clause
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/nbloomf/krebstar

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -fprof-auto -fprof-cafs
  exposed-modules:
      Kreb.Text
    , Kreb.Text.ScreenOffset
    , Kreb.Text.MeasureText
    , Kreb.Text.Pigment
    , Kreb.Text.Buffer
    , Kreb.Text.BufferModel
    , Kreb.Text.SizedBuffer
    , Kreb.Text.TextBox
    , Kreb.Text.TextBox.EditsT
    , Kreb.Text.TextBox.Action
    , Kreb.Text.BufferOp
    , Kreb.Text.CursorWord
    , Kreb.Text.Grapheme
  default-extensions:
      ScopedTypeVariables
    , InstanceSigs
    , RankNTypes
    , KindSignatures
    , GADTs
    , TypeFamilies
  build-depends:
      base >=4.7 && <5
    , containers >=0.6.0.1
    , kreb-control
    , kreb-format
    , kreb-prop
    , kreb-category
    , kreb-reflect
    , kreb-struct
    , kreb-arith
    , kreb-effect

test-suite kreb-text-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Kreb/Text/Test.lhs
  other-modules:
      Kreb.Text.Test.Suite
    , Kreb.Text.ScreenOffset.Test
    , Kreb.Text.MeasureText.Test
    , Kreb.Text.Buffer.Test
    , Kreb.Text.TextBox.Test
    , Kreb.Text.TextBox.Test.Unit
    , Kreb.Text.TextBox.Test.Prop
    , Kreb.Text.CursorWord.Test
    , Kreb.Text.Glyph.Test
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers >=0.6.0.1
    , tasty >=1.2
    , kreb-control
    , kreb-format
    , kreb-unit
    , kreb-prop
    , kreb-category
    , kreb-effect
    , kreb-reflect
    , kreb-struct
    , kreb-text
    , kreb-arith

test-suite kreb-text-doctest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: doctest
  main-is: Kreb/Text/DocTest.lhs
  other-modules: Kreb.Text.DocTest.Suite
  build-depends:
      base >=4.7 && <5
    , doctest >=0.16.0.1
    , kreb-prop
