cabal-version:  2.4
name:           kreb-unit
version:        0.0.0.0
description:    Please see the README on GitHub at <https://github.com/nbloomf/krebstar#readme>
homepage:       https://github.com/nbloomf/krebstar#readme
bug-reports:    https://github.com/nbloomf/krebstar/issues
author:         Nathan Bloomfield
maintainer:     nbloomf@gmail.com
copyright:      Automattic, Inc
license:        BSD-3-Clause
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/nbloomf/krebstar

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
      Kreb.Unit
  other-modules:
      Kreb.Unit.Declare
    , Kreb.Unit.Declarable
    , Kreb.Unit.Helpers
    , Kreb.Unit.Tasty
  default-extensions:
      ScopedTypeVariables
    , InstanceSigs
    , RankNTypes
  build-depends:
      base >=4.7 && <5
    , tasty >=1.2
    , kreb-control
    , kreb-format

test-suite kreb-unit-test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Kreb/Unit/Test.lhs
  other-modules:
      Kreb.Unit.Test.Suite
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , tasty >=1.2
    , kreb-unit

test-suite kreb-unit-doctest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: doctest
  main-is: Kreb/Unit/DocTest.lhs
  other-modules: Kreb.Unit.DocTest.Suite
  build-depends:
      base >=4.7 && <5
    , doctest >=0.16.0.1
